# RayTracer

./: .clang-format  .gitignore  RayTracer.sln
CMake/: CMakeLists.txt
RayTracer/: ExampleScene.h  RayTracer.vcxproj  RayTracer.vcxproj.filters  benchmarkMain.cpp  main.cpp
RayTracer/Engine/: Camera.cpp  Camera.h  Intersection.cpp  Intersection.h  Ray.cpp  Ray.h  RayTracerEngine.cpp  RayTracerEngine.h  Scene.h  StepPooler.cpp  StepPooler.h
RayTracer/Engine/Image/: BmpHader.h  BmpImage.cpp  BmpImage.h  IImage.h
RayTracer/Engine/Objects/: BaseObject.cpp  BaseObject.h  IObject.h  Light.h  Material.h  Mesh.cpp  Mesh.h  Sphere.cpp  Sphere.h  Transform.h  Triangle.cpp  Triangle.h
RayTracer/Engine/Resources/: WaveFrontObjLoader.cpp  WaveFrontObjLoader.h
RayTracer/Utils/: Types.cpp  Types.h  optional.hpp
RayTracerTests/: RayTracerTests.vcxproj  main.cpp
Tools/gtest/lib/x86lib/ReleaseLib/: gtest.lib
